--- a/Movement/UnityVS.Movement.CSharp.csproj
+++ b/Movement/UnityVS.Movement.CSharp.csproj
@@ -57,6 +57,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\BasicAI.cs" />
     <Compile Include="Assets\Scripts\CameraMove.cs" />
     <Compile Include="Assets\Scripts\FlashLight.cs" />
     <Compile Include="Assets\Scripts\Hazard.cs" />
