--- a/Movement/UnityVS.Movement.CSharp.csproj
+++ b/Movement/UnityVS.Movement.CSharp.csproj
@@ -59,11 +59,14 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\BasicAI.cs" />
     <Compile Include="Assets\Scripts\CameraMove.cs" />
+    <Compile Include="Assets\Scripts\DelegateManager.cs" />
+    <Compile Include="Assets\Scripts\EventListener.cs" />
     <Compile Include="Assets\Scripts\FlashLight.cs" />
     <Compile Include="Assets\Scripts\Hazard.cs" />
     <Compile Include="Assets\Scripts\LightBulb.cs" />
     <Compile Include="Assets\Scripts\Movement.cs" />
     <Compile Include="Assets\Scripts\ScreenChanger.cs" />
+    <Compile Include="Assets\Scripts\WinObject.cs" />
     <None Include="Assets\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
     <None Include="Assets\Standard Assets\Skyboxes\_skybox info.txt" />
   </ItemGroup>
